tests/specs/ecosystem/mrii/rocket_io/0_1_3.test
mrii/rocket-io/0.1.3
-- deno.lock --
{
  "version": "3",
  "packages": {
    "specifiers": {
      "npm:socket.io-client@^4.7.5": "npm:socket.io-client@4.7.5"
    },
    "npm": {
      "@socket.io/component-emitter@3.1.2": {
        "integrity": "sha512-9BCxFwvbGg/RsZK9tjXd8s4UcwR0MWeFQ1XEKIQVVvAGJyINdrqKMcTRyLoK8Rse1GjzLV9cwjWV1olXRWEXVA==",
        "dependencies": {}
      },
      "debug@4.3.4": {
        "integrity": "sha512-PRWFHuSU3eDtQJPvnNY7Jcket1j0t5OuOsFzPPzsekD52Zl8qUfFIPEiswXqIvHWGVHOgX+7G/vCNNhehwxfkQ==",
        "dependencies": {
          "ms": "ms@2.1.2"
        }
      },
      "engine.io-client@6.5.3": {
        "integrity": "sha512-9Z0qLB0NIisTRt1DZ/8U2k12RJn8yls/nXMZLn+/N8hANT3TcYjKFKcwbw5zFQiN4NTde3TSY9zb79e1ij6j9Q==",
        "dependencies": {
          "@socket.io/component-emitter": "@socket.io/component-emitter@3.1.2",
          "debug": "debug@4.3.4",
          "engine.io-parser": "engine.io-parser@5.2.2",
          "ws": "ws@8.11.0",
          "xmlhttprequest-ssl": "xmlhttprequest-ssl@2.0.0"
        }
      },
      "engine.io-parser@5.2.2": {
        "integrity": "sha512-RcyUFKA93/CXH20l4SoVvzZfrSDMOTUS3bWVpTt2FuFP+XYrL8i8oonHP7WInRyVHXh0n/ORtoeiE1os+8qkSw==",
        "dependencies": {}
      },
      "ms@2.1.2": {
        "integrity": "sha512-sGkPx+VjMtmA6MX27oA4FBFELFCZZ4S4XqeGOXCv68tT+jb3vk/RyaKWP0PTKyWtmLSM0b+adUTEvbs1PEaH2w==",
        "dependencies": {}
      },
      "socket.io-client@4.7.5": {
        "integrity": "sha512-sJ/tqHOCe7Z50JCBCXrsY3I2k03iOiUe+tj1OmKeD2lXPiGH/RUCdTZFoqVyN7l1MnpIzPrGtLcijffmeouNlQ==",
        "dependencies": {
          "@socket.io/component-emitter": "@socket.io/component-emitter@3.1.2",
          "debug": "debug@4.3.4",
          "engine.io-client": "engine.io-client@6.5.3",
          "socket.io-parser": "socket.io-parser@4.2.4"
        }
      },
      "socket.io-parser@4.2.4": {
        "integrity": "sha512-/GbIKmo8ioc+NIWIhwdecY0ge+qVBSMdgxGygevmdHj24bsfgtCmcUUcQ5ZzcylGFHsN3k4HB4Cgkl96KVnuew==",
        "dependencies": {
          "@socket.io/component-emitter": "@socket.io/component-emitter@3.1.2",
          "debug": "debug@4.3.4"
        }
      },
      "ws@8.11.0": {
        "integrity": "sha512-HPG3wQd9sNQoT9xHyNCXoDUa+Xw/VevmY9FoHyQ+g+rrMn4j6FB4np7Z0OhdTgjx6MgQLK7jwSy1YecU1+4Asg==",
        "dependencies": {}
      },
      "xmlhttprequest-ssl@2.0.0": {
        "integrity": "sha512-QKxVRxiRACQcVuQEYFsI1hhkrMlrXHPegbbd1yn9UHOmRxY+si12nQYzri3vbzt8VdTTRviqcKxcyllFas5z2A==",
        "dependencies": {}
      }
    }
  },
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: Error: [ERR_PACKAGE_PATH_NOT_EXPORTED] Package subpath './build/esm/socket' is not defined for types by "exports" in '<global_npm_dir>/socket.io-client/4.7.5/package.json' imported from 'file://<tmpdir>/src/types/socket-reserved-events.ts'
    at Object.resolveModuleNameLiterals (ext:deno_cli_tsc/97_ts_host.js:622:26)
    at ext:deno_cli_tsc/97_ts_host.js:757:49
    at spanned (ext:deno_cli_tsc/97_ts_host.js:16:12)
    at Object.host.<computed> [as resolveModuleNameLiterals] (ext:deno_cli_tsc/97_ts_host.js:757:14)
    at resolveModuleNamesWorker (ext:deno_cli_tsc/00_typescript.js:126315:20)
    at resolveNamesReusingOldState (ext:deno_cli_tsc/00_typescript.js:126457:14)
    at resolveModuleNamesReusingOldState (ext:deno_cli_tsc/00_typescript.js:126413:12)
    at processImportedModules (ext:deno_cli_tsc/00_typescript.js:127900:118)
    at findSourceFileWorker (ext:deno_cli_tsc/00_typescript.js:127675:7)
    at findSourceFile (ext:deno_cli_tsc/00_typescript.js:127526:20)

